# face_segmentation_old_people

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  export-2021-06-10T14_31_06.887Z.json  pyproject.toml
src/: segmentation.ipynb
