[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["Damian Brzoza"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "E231", "D100", "D401"]
doctests = true

[tool.pytest.ini_options]
addopts = "--color=yes"
norecursedirs = "docs"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = "True"
